--- a/src/Components/nav.css
+++ b/src/Components/nav.css
@@ -57,3 +57,9 @@ a:hover {
     list-style: none;
     padding: 0 0 0 2px;
 }
+
+@media only screen and (max-width: 480px) {
+    anchor {
+    display:none;
+    }
+  }
